objects/MobilePaks__MobilePaks_Activity__c.object
<CustomObject>
    <fields>
        <fullName>MobilePaks__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Veelo Activities</relationshipLabel>
        <relationshipName>MobilePaks_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePaks__ActivityDateTime__c</fullName>
        <label>ActivityDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MobilePaks__ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened Pak</fullName>
                </value>
                <value>
                    <fullName>Viewed Pak</fullName>
                </value>
                <value>
                    <fullName>Downloaded File</fullName>
                </value>
                <value>
                    <fullName>Shared Pak</fullName>
                </value>
                <value>
                    <fullName>Shared File</fullName>
                </value>
                <value>
                    <fullName>Opened Shared Pak</fullName>
                </value>
                <value>
                    <fullName>Viewed Shared Pak</fullName>
                </value>
                <value>
                    <fullName>Downloaded Shared File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobilePaks__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Veelo Activities</relationshipLabel>
        <relationshipName>MobilePaks_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePaks__ContentName__c</fullName>
        <label>Pak/File Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MobilePaks__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Veelo Activities</relationshipLabel>
        <relationshipName>MobilePaks_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePaks__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Veelo Activities</relationshipLabel>
        <relationshipName>MobilePaks_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MobilePaks__Sales_Stage__c</fullName>
        <description>Sales stage of opportunity at the moment of Veelo Activity</description>
        <label>Sales Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePaks__Subject__c</fullName>
        <label>Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Veelo Activity</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veelo Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>